--- a/.env
+++ b/.env
@@ -1,12 +1,12 @@
 # Server Configuration
 NODE_ENV=development
-PORT=3000
+PORT=4550
 
 # Database Configuration
 DB_HOST=localhost
 DB_PORT=5432
 DB_USER=postgres
-DB_PASSWORD=your_secure_password
+DB_PASSWORD=0962324649Ahmad
 
 # JWT Authentication
 JWT_SECRET=your_very_secure_jwt_secret_key
@@ -16,7 +16,9 @@ TRENDS_API_URL=https://trends-api.example.com
 TRENDS_API_KEY=your_trends_api_key
 
 DEEPSEEK_API_URL=https://api.deepseek.com/v1/completions
-DEEPSEEK_API_KEY=your_deepseek_api_key
+DEEPSEEK_API_KEY=sk-be5ef4f94e654c009bcd53781aaf696a
 
+PIXABAY_API_KEY=10580689-53949a2c3d6ad1e4a8976f3ac
 # Logging
 LOG_LEVEL=info
+IMAGE_API_URL=https://api.unsplash.com/photos/random
