--- a/.env
+++ b/.env
@@ -11,14 +11,18 @@ DB_PASSWORD=0962324649Ahmad
 # JWT Authentication
 JWT_SECRET=your_very_secure_jwt_secret_key
 
-# API Keys
-TRENDS_API_URL=https://trends-api.example.com
+# Google Trends API - Using a proxy service since Google doesn't offer an official API
+# For development, you might use the npm package google-trends-api which doesn't require an API key
+TRENDS_API_URL=https://serpapi.com/google-trends
 TRENDS_API_KEY=your_trends_api_key
 
-DEEPSEEK_API_URL=https://api.deepseek.com/v1/completions
+# DeepSeek API for content generation
+DEEPSEEK_API_URL=https://api.deepseek.com/v1/chat/completions
 DEEPSEEK_API_KEY=sk-be5ef4f94e654c009bcd53781aaf696a
 
+# Pixabay API for images
+PIXABAY_API_URL=https://pixabay.com/api/
 PIXABAY_API_KEY=10580689-53949a2c3d6ad1e4a8976f3ac
+
 # Logging
 LOG_LEVEL=info
-IMAGE_API_URL=https://api.unsplash.com/photos/random
