--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "express-rate-limit": "^7.5.0",
+    "google-trends-api": "^4.9.2",
     "helmet": "^7.2.0",
     "i18n": "^0.15.1",
     "joi": "^17.11.0",
