--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 # Server Configuration
 NODE_ENV=development
-PORT=3333
+PORT=3300
 
 # Database Configuration
 DB_HOST=localhost
@@ -11,14 +11,13 @@ DB_PASSWORD=0962324649Ahmad
 # JWT Authentication
 JWT_SECRET=your_very_secure_jwt_secret_key
 
-# Google Trends API - Using a proxy service since Google doesn't offer an official API
 # For development, you might use the npm package google-trends-api which doesn't require an API key
 TRENDS_API_URL=https://serpapi.com/google-trends
 TRENDS_API_KEY=your_trends_api_key
 
 # DeepSeek API for content generation
-DEEPSEEK_API_URL=https://api.deepseek.com/v1/chat/completions
-DEEPSEEK_API_KEY=sk-01d9679617324fea9ef33371323eb931
+DEEPSEEK_API_URL=https://api.deepseek.com
+DEEPSEEK_API_KEY=sk-be5ef4f94e654c009bcd53781aaf696a
 
 # Pixabay API for images
 PIXABAY_API_URL=https://pixabay.com/api/
