--- a/.env
+++ b/.env
@@ -26,5 +26,9 @@ OpenAI_API_KEY=sk-be5ef4f94e654c009bcd53781aaf696a
 PIXABAY_API_URL=https://pixabay.com/api/
 PIXABAY_API_KEY=10580689-53949a2c3d6ad1e4a8976f3ac
 
-# Logging
+# Logging Configuration
 LOG_LEVEL=info
+VERBOSE_LOGGING=true
+GENERATION_LOGS_INTERVAL=60000  # Log every minute (60000ms)
+DETAILED_TIMING_LOGS=true       # Enable detailed timing breakdowns
+LOG_MEMORY_STATS=true           # Include memory usage statistics
